# tianheng

./: .gitignore  AGENTS.md  AGENTS.self-law.md  BACKLOG.md  CHANGELOG.md  COOKBOOK.md  Cargo.toml  PROJECT.md  README.md  deny.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml  guibiao-false-negative.yml  hunyi-missed-leak.yml  louke-origin-pattern.yml
.github/workflows/: ci.yml
crates/guibiao/: Cargo.toml  README.md
crates/guibiao/src/: cargo_metadata.rs  coverage.rs  crate_check.rs  errors.rs  finding.rs  lib.rs  model.rs  module_check.rs  module_scan.rs  projection.rs  tests.rs
crates/guibiao/src/module_scan/: fs_walk.rs  lexer.rs  mod.rs  path_vocab.rs  reachability.rs  symbol_scan.rs  use_scan.rs
crates/guibiao/tests/: adopter_surface.rs
crates/hunyi/: Cargo.toml  README.md
crates/hunyi/src/: async_exposure.rs  collect.rs  containment.rs  crate_scope.rs  driver.rs  dsl.rs  dyn_trait.rs  emit.rs  errors.rs  exposure.rs  file_scope.rs  finding.rs  forbidden_marker.rs  impl_trait.rs  lib.rs  metadata.rs  module_resolve.rs  resolve.rs  rules.rs  scan.rs  shape_scan.rs  syn_util.rs  tests.rs  trait_impl.rs  unsafe_confinement.rs  visibility.rs
crates/hunyi/src/dsl/: async_exposure.rs  dyn_trait.rs  forbidden_marker.rs  impl_trait.rs  mod.rs  signature.rs  trait_impl.rs  unsafe_confinement.rs  visibility.rs
crates/hunyi/src/resolve/: mod.rs  shape.rs
crates/hunyi/tests/: adopter_surface.rs
crates/louke/: Cargo.toml  README.md
crates/louke/src/: audit.rs  dsl.rs  finding.rs  lib.rs  registry.rs  tests.rs  tracked.rs
crates/louke/src/audit/: scan.rs  tests.rs
crates/louke/tests/: adopter_surface.rs  install_rejects_duplicates.rs  integration.rs  reinstall.rs  sink_twice.rs
crates/tianheng/: Cargo.toml  README.md
crates/tianheng/src/: constitution.rs  existential.rs  lib.rs  main.rs  runner.rs  sans_io.rs  testing.rs
crates/tianheng/src/runner/: projection.rs  render.rs  term_color.rs  tests.rs
crates/tianheng/src/runner/projection/: document.rs  gate.rs  markdown.rs  text.rs
crates/tianheng/tests/: adopter_surface.rs  baseline_cli.rs  dual_backed_module_conformance.rs  errors_conformance.rs  lexical_conformance.rs  path_within_conformance.rs  self_governance.rs
crates/tianheng/tests/fixtures/clean/: Cargo.toml
crates/tianheng/tests/fixtures/clean/src/: lib.rs
crates/tianheng/tests/fixtures/orphan_probe/: Cargo.toml
crates/tianheng/tests/fixtures/orphan_probe/src/: lib.rs
crates/tianheng/tests/fixtures/violating/: Cargo.toml
crates/tianheng/tests/fixtures/violating/src/: lib.rs
crates/tianheng/tests/support/: mod.rs
crates/xingbiao/: Cargo.toml  README.md
crates/xingbiao/src/: lib.rs  path_identity.rs  tests.rs
crates/xuanji/: Cargo.toml  README.md
crates/xuanji/src/: baseline.rs  finding.rs  identity.rs  lib.rs  model.rs  tests.rs  util.rs  violation.rs
docs/history/: 0.1.0-0.3.0-built-ledger.md
examples/: README.md
examples/capability-catalog/: Cargo.toml  README.md
examples/capability-catalog/src/: governance.rs  lib.rs  marked.rs  misplaced.rs  shapes.rs
examples/capability-catalog/tests/: reaction.rs
examples/composed/: Cargo.toml  README.md
examples/composed/src/: adapters.rs  api.rs  domain.rs  governance.rs  infra.rs  lib.rs  port.rs
examples/composed/tests/: funnel.rs  runtime.rs
examples/guibiao-standalone/: Cargo.toml  README.md
examples/guibiao-standalone/src/: domain.rs  governance.rs  infra.rs  lib.rs
examples/guibiao-standalone/tests/: reaction.rs
examples/hunyi-standalone/: Cargo.toml  README.md
examples/hunyi-standalone/src/: api.rs  governance.rs  infra.rs  internal.rs  lib.rs
examples/hunyi-standalone/tests/: reaction.rs
examples/sans-io-pure/: Cargo.toml  README.md
examples/sans-io-pure/src/: governance.rs  kernel.rs  lib.rs
examples/sans-io-pure/src/kernel/: inner.rs
examples/sans-io-pure/tests/: reaction.rs
examples/unsafe-confinement/: Cargo.toml  README.md
examples/unsafe-confinement/src/: ffi.rs  governance.rs  lib.rs  net.rs
examples/unsafe-confinement/tests/: reaction.rs
openspec/: config.yaml
openspec/changes/add-composed-check-entrypoint/: design.md  proposal.md  tasks.md
openspec/changes/add-reusable-testing-harness/: design.md  proposal.md  tasks.md
openspec/changes/add-scan-depth-toggles/: design.md  proposal.md  tasks.md
openspec/changes/align-scan-depth-self-law-examples/: design.md  proposal.md  tasks.md
openspec/changes/cleanup-louke-phantom-tests/: design.md  proposal.md  tasks.md
openspec/changes/close-runtime-orphan-probe-coverage/: design.md  proposal.md  tasks.md
openspec/changes/code-refine-and-harden-contracts/: design.md  proposal.md  tasks.md
openspec/changes/crate-source-boundary/: tasks.md
openspec/changes/define-adopter-surface-contract/: design.md  proposal.md  tasks.md
openspec/changes/docs-denoise-history-and-specs/: design.md  proposal.md  tasks.md
openspec/changes/document-v1-baseline-upgrade/: design.md  proposal.md  tasks.md
openspec/changes/enforce-example-suite-completeness/: design.md  proposal.md  tasks.md
openspec/changes/enforce-release-coherence/: design.md  proposal.md  tasks.md
openspec/changes/existential-leak-profile/: design.md  proposal.md  tasks.md
openspec/changes/guibiao-cfg-attr-observe-both/: design.md  proposal.md  tasks.md
openspec/changes/harden-0-3-release/: design.md  proposal.md  tasks.md
openspec/changes/harden-isolated-example-gates/: design.md  proposal.md  tasks.md
openspec/changes/narrow-rule-model-surface/: design.md  proposal.md  tasks.md
openspec/changes/pin-published-identity-schema/: design.md  proposal.md  tasks.md
openspec/changes/react-published-family-coverage/: design.md  proposal.md  tasks.md
openspec/changes/refactor-guibiao-cleanup/: design.md  proposal.md  tasks.md
scripts/: check_release_coherence.sh  test_example_quality_gate.sh  test_example_suite.sh  test_examples.sh  test_published_family_coverage.sh  test_release_coherence.sh
scripts/lib/: example_quality.sh  example_suite.sh  published_family_coverage.sh
(+176 files in other folders)
