# 天衡 (Tiānhéng) workspace.
#
# A reactive architectural-governance crate family. The real crates (no stubs — see below):
#   - xuanji  (璇璣): the dimension-agnostic reaction model — the 底.
#   - guibiao (圭表): the gnomon — dependency-light static observation core, derived from modou.
#   - hunyi   (渾儀): the armillary — semantic (AST/syn) observation; the syn dependency lives here.
#   - louke   (漏刻): the clepsydra — runtime observation; ships into prod, depends on 璇璣 only.
#   - tianheng(天衡): the celestial balance — CLI shell + facade that composes the CI dimensions.
#
# All three 儀 are now born (圭表 static, 渾儀 semantic, 漏刻 runtime); each was created only
# WHEN built (drift law: no name without a reaction).
[workspace]
resolver = "2"
members = ["crates/xuanji", "crates/xingbiao", "crates/hunyi", "crates/guibiao", "crates/louke", "crates/tianheng"]
# Test fixtures are their own workspaces (each carries `[workspace]`); exclude them so
# this workspace does not try to absorb the intentionally-violating ones.
exclude = [
    "crates/tianheng/tests/fixtures/clean",
    "crates/tianheng/tests/fixtures/violating",
    "crates/tianheng/tests/fixtures/orphan_probe",
]

[workspace.package]
version = "0.1.6"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tacticaldoll/tianheng"
homepage = "https://github.com/tacticaldoll/tianheng"

[workspace.dependencies]
xuanji = { path = "crates/xuanji", version = "0.1.6" }
xingbiao = { path = "crates/xingbiao", version = "0.1.6" }
hunyi = { path = "crates/hunyi", version = "0.1.6" }
guibiao = { path = "crates/guibiao", version = "0.1.6" }
louke = { path = "crates/louke", version = "0.1.6" }
serde_json = "1"
# syn is the heavy AST dependency, quarantined to 渾儀 (hunyi) alone — never the
# 圭表 core or 璇璣 model (enforced by self_governance.rs).
syn = { version = "2", features = ["full", "visit"] }
