[package]
name = "guibiao"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/guibiao"
readme = "README.md"
# 圭表 (Guībiǎo) — the gnomon, reading the cast shadow (imports & deps). Meaning lives here in the SSOT, not in a
# self-describing name (a name that pretends to describe itself can drift; this one
# points at the authoritative description instead).
description = "圭表 (Guibiao) — Tianheng's dependency-light static observation core (derived from modou). Declare crate, module, and dependency-source boundaries in Rust — dependencies by name, module imports, and each dependency's declared source kind (git/registry/path) for manifest hygiene — observed from cargo metadata and source use-scans, reacted in CI. No AST: the syn-free gnomon of the family."
keywords = ["governance", "architecture", "boundary", "static-analysis", "ci"]
categories = ["development-tools"]

[dependencies]
xuanji = { workspace = true }
serde_json = { workspace = true }
