[package]
name = "hunyi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/hunyi"
readme = "README.md"
# 渾儀 (Húnyí) — the semantic dimension. A coined / narrative name (like 圭表, 璇璣,
# 漏刻), no role-prefix: meaning lives here in the SSOT. It observes *meaning* via the AST
# (`syn`) — public-API exposure, trait-impl locality, visibility, and forbidden markers —
# the semantic complement of the static import boundary.
description = "渾儀 (Hunyi) — the semantic observation dimension of Tianheng: declare in Rust how a module's public surface must behave — what types its API must not expose (including via named public re-exports, and — opt-in — a trait impl's impl-site-authored positions), where a trait may be implemented, that a module declares no bare pub, which markers a type must not acquire, and that its seam exposes no dyn / impl Trait (shape or a named trait) or async fn — observed via the AST (syn), reacted in CI. The semantic complement of the static import boundary; the syn dependency is quarantined here, never in the core."
keywords = ["governance", "architecture", "boundary", "ast", "ci"]
categories = ["development-tools"]

[dependencies]
xuanji = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
