[package]
name = "louke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/louke"
readme = "README.md"
# жјҸеҲ» (LГІukГЁ) вҖ” the runtime dimension. A coined / narrative name (like еңӯиЎЁ, жёҫе„Җ, з’Үз’Ј):
# the clepsydra, the instrument of flow/time. Meaning lives here in the SSOT.
description = "жјҸеҲ» (Louke) вҖ” the runtime observation dimension of Tianheng: declare which concrete-type origins may cross a runtime seam, probe live dyn objects in production fail-closed, react as a structured event (panic opt-in), and audit probe coverage at CI time. Ships into the production binary; hot path is std-only, depends on з’Үз’Ј only (жҳҹиЎЁ is an additive, audit-feature-gated exception that never reaches the production hot path)."
keywords = ["governance", "architecture", "boundary", "runtime", "ci"]
categories = ["development-tools"]

# docs.rs builds default features (audit OFF) by default, which would omit the entire CI face
# (`audit_probe_coverage`) from the published docs. Build all features there so the CI face is
# documented; the prod-light default is unaffected for actual dependents.
[package.metadata.docs.rs]
all-features = true

[features]
# The CI face (`audit_probe_coverage` + the hand-rolled source scanner). OFF by default so a
# production binary depending on louke for the runtime hot path compiles zero scanner code.
# The `tianheng` shell enables it to run the audit inside `check`. (See PROJECT.md.)
audit = ["dep:xingbiao"]

[dependencies]
xuanji = { workspace = true }
# CI-only (pulled in only by the `audit` feature): the shared path-identity canonicalize/cycle-
# guard primitives еңӯиЎЁ and жёҫе„Җ already route their own module-graph cycle guards through, so
# жјҸеҲ»'s probe scanner stops carrying a third, independently hand-rolled (and previously
# non-canonicalizing) copy of the identical guard. Never reaches the production hot path.
xingbiao = { workspace = true, optional = true }
