# Contract-coverage catalog for published boundary families that do not belong in a focused
# teaching example. This intentionally violating crate is an isolated workspace; the examples gate
# patches the honestly declared crates.io dependency to Tianheng's local source.
[package]
name = "capability_catalog"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tianheng = "0.2"

[workspace]
