# The composed example Рђћ тцЕУАА (tianheng) as the funnel target: one app governed by all СИЅтёђ.
#
# Two dependencies, the honest adopter setup: `tianheng` is the CI shell (composes the static
# тюГУАе + semantic ТИЙтёђ + runtime Т╝Јтѕ╗ into one `check`), and `louke` is the runtime dimension's
# **prod face** Рђћ an adopter wires it into their own binary (`install` + `assert_boundary!`), so it
# is a direct dependency here, not reached through the shell.
#
# Its own workspace so its deliberate faults are not swept by Tianheng's workspace-wide gates;
# CI runs it in isolation via `scripts/test_examples.sh` with the family patched to local source.
[package]
name = "composed_app"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tianheng = "0.2"
louke = "0.2"

[workspace]
