# Standalone adoption of 渾儀 (hunyi) — the semantic (public-API exposure) dimension.
#
# Its own workspace (`[workspace]` below) so its *deliberate* API leak is never swept by
# Tianheng's workspace-wide gates; CI runs it in isolation via `scripts/test_examples.sh`,
# patching the family crates to local source so the committed `hunyi = "0.2"` still resolves.
#
# Unlike 圭表, this footprint is NOT light: 渾儀 is the semantic instrument, so it carries the
# quarantined `syn`. That is the honest footprint — the point is *where syn lives*, not that it
# is small.
[package]
name = "api_hygiene"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
hunyi = "0.2"

[workspace]
